src/main/java/com/example/ncsproject/global/error/NcsException.java
package com.example.ncsproject.global.error;public class NcsException {
}
